# ai-code-review-context

./: .gitignore  AGENTS.md  README.md  USAGE.md  pytest.ini  requirements.txt
agent/: README.md
context/: README.md
dev_docs/: AGENTS.md  (+1 more)
tests/fixtures/fastapi-sqlalchemy-starter-main/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SECRETS_POLICY.md  alembic.ini  docker-compose.pgadmin.yml  docker-compose.yml  justfile  pyproject.toml  requirements.txt
tests/fixtures/fastapi-sqlalchemy-starter-main/.devcontainer/: devcontainer.json
tests/fixtures/fastapi-sqlalchemy-starter-main/.github/workflows/: ci.yml
tests/fixtures/fastapi-sqlalchemy-starter-main/alembic/: env.py
tests/fixtures/fastapi-sqlalchemy-starter-main/alembic/versions/: 0001_create_users.py  0002_add_password_hash.py
tests/fixtures/fastapi-sqlalchemy-starter-main/app/: deps.py  main.py
tests/fixtures/fastapi-sqlalchemy-starter-main/app/api/: auth.py  users.py
tests/fixtures/fastapi-sqlalchemy-starter-main/app/core/: auth.py  config.py  db.py
tests/fixtures/fastapi-sqlalchemy-starter-main/app/crud/: __init__.py  user.py
tests/fixtures/fastapi-sqlalchemy-starter-main/app/models/: __init__.py  auth.py  mixins.py  user.py
tests/fixtures/fastapi-sqlalchemy-starter-main/app/schemas/: auth.py  user.py
tests/fixtures/fastapi-sqlalchemy-starter-main/docs/: openapi.json
tests/fixtures/fastapi-sqlalchemy-starter-main/scripts/: export_openapi.py
tests/fixtures/fastapi-sqlalchemy-starter-main/tests/: conftest.py  test_users.py
(+132 files in other folders)
